--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,15 +23,23 @@ jobs:
 
       - name: Cache NPM dependencies
         uses: actions/cache@v3 
+        id: cache
         with:
           path: ./npm
           key: npm-${{ hashFiles('package-lock.json') }}
             
       - name: Install dependencies
+        if: ${{ steps.cache.outputs.cache-hit != 'true'}}
         run: npm ci
 
       - name: Run linter
         run: npm run lint
+        
+      - name: Build
+        run: npm build
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -42,6 +50,5 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
           tags: node-js-app:latest
