--- a/.github/workflows/my-docker-image2.yml
+++ b/.github/workflows/my-docker-image2.yml
@@ -32,11 +32,9 @@ jobs:
         if: ${{ steps.cache.outputs.cache-hit != 'true'}}
         run: npm ci
 
-      - name: Run linter
-        run: npm run lint
-        
-      - name: Build
-        run: npm build
+      - name: ESLint Action eslintrc 
+        with:
+          eslint-rc: .eslintrc.json
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
