--- a/.github/workflow2.yml
+++ b/.github/workflow2.yml
@@ -33,14 +33,14 @@ jobs:
         run: npm ci
 
        - name: ESLint Action eslintrc 
-         uses: stefanoeb/eslint-action@1.0.2
-        
-        
-      - name: Build
-        run: npm build
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+         run: npm install eslint@8.10.0
+         
+       - name: Run ESLint
+         run: npx eslint .
+           --config .eslintrc.json
+           --ext .js,.jsx,.ts,.tsx
+         continue-on-error: false
+       
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
