--- a/.github/workflow2.yml
+++ b/.github/workflow2.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
 
+ linting:
+    runs-on: ubuntu-latest
+
   build:
 
     runs-on: ubuntu-latest
@@ -25,13 +28,19 @@ jobs:
         uses: actions/cache@v3 
         id: cache
         with:
-          path: ./npm
-          key: npm-${{ hashFiles('package-lock.json') }}
+          path: ./node_modules
+          key: modules-${{ hashFiles('package-lock.json') }}
             
       - name: Install dependencies
         if: ${{ steps.cache.outputs.cache-hit != 'true'}}
         run: npm ci
-       
+        
+      - name: Run eslint 
+        run: npm run lint:check
+        docker_build:
+         needs: linting
+         runs-on: ubuntu-latest
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
