--- a/.github/workflow2.yml
+++ b/.github/workflow2.yml
@@ -38,10 +38,12 @@ jobs:
           runs-on: ubuntu-latest
         
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-            username: ${{ secrets.USERNAME }}
-            password: ${{ secrets.PASSWORD }}
+        env:
+          DOCKER_USERNAME: ${{secrets.USERNAME}}
+          DOCKER_PASSWORD: ${{secrets.PASSWORD}}
+        run: |
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+         
         
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
