--- a/.github/workflow2.yml
+++ b/.github/workflow2.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  linting:
 
     runs-on: ubuntu-latest
 
@@ -35,7 +35,8 @@ jobs:
       - name: Run ESlint 
         run: npm run lint:check
         docker_build:
-          runs-on: ubuntu-latest
+            needs: linting
+            runs-on: ubuntu-latest
         
       - name: Log in to Docker Hub
         env:
