--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  linting:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -33,9 +33,7 @@ jobs:
         run: npm ci
         
       - name: Run ESlint 
-        uses: stefanoeb/eslint-action@1.0.2
-        with:
-         files: 'eslintrc.json'
+        run: npm run lint:check
         
       - name: Log in to Docker Hub
         env:
