--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -36,11 +36,10 @@ jobs:
         run: npm run lint:check
         
       - name: Log in to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{secrets.USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.PASSWORD}}
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
          
         
       - name: Build and push Docker image
