--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Run ESlint 
         run: npm run lint:check
         
+      - name: Build docker image
+        run: docker build -t ${{secrets.USERNAME}}/devops-kpi:latest .
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
