--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -33,7 +33,8 @@ jobs:
         run: npm ci
         
       - name: Run ESlint 
-        run: npm run lint:check
+        run: npm run lint
+ 
         
       - name: Build docker image
         run: docker build -t ${{secrets.USERNAME}}/devops-kpi:latest .
