--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -32,8 +32,11 @@ jobs:
         if: ${{ steps.cache.outputs.cache-hit != 'true'}}
         run: npm ci
         
-      - name: Run ESlint 
-        run: npm run lint
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
+          prettier: true
  
         
       - name: Build docker image
