--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -39,7 +39,7 @@ jobs:
  
         
       - name: Build docker image
-        run: docker build -t ${{secrets.USERNAME}}/devops-kpi:latest .
+        run: docker build -t ${{secrets.USERNAME}}/app-js:latest .
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
