--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -34,7 +34,9 @@ jobs:
         run: npm ci
         
       - name: Run linters
-        run: npm run lint
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
 
 
   build:
